Solved sentence spacing in profile created by statement

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -346,6 +346,11 @@ label {
   margin-top: 0;
 }
 
+.projectcreation-info-2 {
+  margin-left: 5.2em;
+  margin-top: 0;
+}
+
 .entered-text-display-header {
   background-color: $grey;
   color: $middle-grey;
